# APF_BACKEND_TUTOR_ASSIGNMENT_MANUSCRIPT

./: LICENSE  README.md  models.py  routes.py  services.py  test_routes.py
FastAPi_Tutorial/: main.py  routes.py  test_routes.py
Flight_Booking_API/: main.py  pyproject.toml  routes.py  services.py  test_routes.py
Path_Query_Paramter/Practical(ass2)/: practical-answer.md
Path_Query_Paramter/Theory(ass1)/: theory-answer.md
