[tool.poetry]
name = "flight-booking-api"
version = "0.1.0"
description = ""
authors = ["thoth2357 <thoth2357@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
phonenumbers = "^8.13.33"
pydantic-extra-types = "^2.6.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
uvicorn = "^0.29.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-func-cov = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
